Move example to root

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.11",
   "author": "Andrew D.Laptev <a.d.laptev@gmail.com>",
   "description": "ffmpeg wrapper for rtsp streaming",
-  "main": "lib/rtsp-ffmpeg.js",
+  "main": "server.js",
   "keywords": [
     "rtsp",
     "ffmpeg",
